@@ -8,6 +8,7 @@ Legend:
 
 Version 0.3.8 - ??
 - [new] add WFWebApplicationDelegate::rerouteInvocationPath() function to allow routing customizations.
+- [bugfix] WFYAHOO_widget_TabView no longer tries to select tabs from $_REQUEST[$tabViewId] if the tab does not exist. This caused no tab to be selected in some cases.
 
 Version 0.3.7 - 6/10/2010
 - [bugfix] Add htmlspecialchars() to WFYAHOO_widget_AutoComplete.
